Fixed a bug where a vertical scrollbar didn't appear

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,7 +26,8 @@
 }
 
 #dropzone {
-  position: fixed;
+  position: absolute;
+  overflow-x: hidden;
   left: 0;
   top: 0;
   width: 100%;
